<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f9fbe7">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:hint="Enter Title here..."
        android:selectAllOnFocus="false"
        android:singleLine="true" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="93dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/add_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="15dp"
        android:onClick="addTodoItem"
        android:text="@string/add_button" />

    <TextView
        android:id="@+id/titleHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:text="@string/title_heading"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/titleHeading"
        android:layout_marginTop="104dp"
        android:text="@string/description_heading"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/captureButton"
        android:layout_alignStart="@+id/titleHeading"
        android:text="@string/capture_image_heading"
        android:textStyle="bold"
        android:onClick="captureImage"/>

    <Button
        android:id="@+id/captureButton"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/description"
        android:layout_marginEnd="20dp"
        android:elevation="15dp"
        android:onClick="captureImage"/>
    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:layout_below="@id/captureButton"/>

</RelativeLayout>